# maplibre-optimizer

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CITATION.cff  CLAUDE.md  Cargo.toml  README.md  biome.json  justfile  renovate.json  t.py  todo.md
.github/workflows/: audit-check.yml  ci.yml
codegen2/: CHANGELOG.md  Cargo.toml  README.md
codegen2/src/: block.rs  body.rs  docs.rs  enum.rs  fields.rs  formatter.rs  function.rs  impl.rs  import.rs  item.rs  lib.rs  module.rs  scope.rs  struct.rs  trait.rs  type.rs  type_alias.rs  type_def.rs  util.rs  variant.rs
codegen2/tests/: codegen.rs
maplibre-style-optimizer/: Cargo.toml
maplibre-style-optimizer/src/: advisory.rs  eval.rs  lib.rs  main.rs  optimize.rs  stats.rs
maplibre-style-optimizer/src/optimize/: advisory_rewrite.rs  cleanup.rs  dead.rs  defaults.rs  expr.rs  expr_util.rs  field_analysis.rs  metadata.rs  mod.rs  selectivity.rs  source_util.rs  strip.rs  typed_passes.rs  walk.rs  zoom.rs
maplibre-style-optimizer/src/optimize/expr/: mod.rs  reorder.rs  simplify.rs
maplibre-style-optimizer/tests/: proptest_idempotency.proptest-regressions  proptest_idempotency.rs  unary_simplification_fixture.rs
maplibre-style-spec/: Cargo.toml  PLAN.md  TODO.md  better_style_spec.md
maplibre-style-spec/fuzz/: Cargo.toml  README.md
maplibre-style-spec/fuzz/fuzz_targets/: spec_roundtrip.rs
maplibre-style-spec/src/: decoder.rs  expression_validate.rs  fuzz_helpers.rs  lib.rs  shared_expr.rs  spec.rs  validate.rs
maplibre-style-spec/src/decoder/: array.rs  enum.rs  mod.rs  property_type.rs
maplibre-style-spec/src/fixture/: expression_name_renaming.json
maplibre-style-spec/src/generator/: autotest.rs  formatter.rs  literals.rs  mod.rs  untagged.rs
maplibre-style-spec/src/generator/items/: array.rs  boolean.rs  color.rs  color_array.rs  enum.rs  expression.rs  filter.rs  font_faces.rs  formatted.rs  layout.rs  light.rs  mod.rs  number.rs  number_array.rs  padding.rs  paint.rs  projection.rs  projection_definition.rs  promote_id.rs  reference.rs  resolved_image.rs  sky.rs  source.rs  sources.rs  sprite.rs  star.rs  state.rs  string.rs  terrain.rs  transition.rs  variable_anchor_offset_collection.rs
maplibre-style-spec/src/generator/items/enum/: mod.rs  regular.rs  syntax.rs  version.rs
maplibre-style-spec/src/generator/snapshots/: maplibre_style_spec__generator__tests__expression_name_renaming.snap  maplibre_style_spec__generator__tests__generate_spec_groups.snap  maplibre_style_spec__generator__tests__generate_spec_items.snap  maplibre_style_spec__generator__tests__generate_spec_oneof.snap
maplibre-style-spec/src/mir/: README.md  expressions.rs  layers.rs  lower.rs  mod.rs  resources.rs  root.rs  sources.rs  types.rs
maplibre-style-spec/src/mir/preprocessing/: .layers.rs.pending-snap  expressions.rs  layers.rs  mod.rs  sources.rs
maplibre-style-spec/src/mir/preprocessing/snapshots/: maplibre_style_spec__mir__preprocessing__layers__tests__decode_top_level.snap  maplibre_style_spec__mir__preprocessing__sources__tests__preprocess_sources_snapshot.snap
maplibre-style-spec/src/spec/: decoder.rs  expressions.rs  generator.rs  layers.rs  literals.rs  mod.rs  named_types.rs  root.rs  sources.rs
maplibre-style-spec/tests/: decode.rs  expression_reject_parity.rs  roundtrip_layers.rs  style_spec_reject_parity.rs  test_decoder.rs
style-optimizer/: Cargo.toml  build.rs
style-optimizer/proto/: vector_tile.proto
style-optimizer/src/: advisory.rs  complexity.rs  encode_mlt.rs  lib.rs  main.rs  mbtiles.rs  mvt.rs  prune.rs  stats.rs
style-optimizer/src/cmd/: advisory.rs  complexity.rs  mod.rs  optimize.rs  stats.rs
style-optimizer/src/optimize/: .mod.rs.pending-snap  cleanup.rs  color.rs  dead.rs  defaults.rs  legacy_filter.rs  merge.rs  metadata.rs  mod.rs  ramp.rs  selectivity.rs  source_util.rs  strip.rs  walk.rs  zoom.rs
style-optimizer/src/optimize/expr/: fold.rs  fold_stats.rs  mod.rs  simplify.rs  util.rs
style-optimizer/src/stats/: collect.rs  mod.rs
style-optimizer/tests/: complexity.rs  constant_fold.rs  proptest_idempotency.proptest-regressions  proptest_idempotency.rs  unary_simplification_fixture.rs
style-optimizer/tests/fixtures/: unary_simplification_style.expected.json  unary_simplification_style.json
style-optimizer/tests/snapshots/: complexity__complexity_report_basic.snap  complexity__complexity_report_empty_style.snap
style-spec/: Cargo.toml  PLAN.md  TODO.md  better_style_spec.md
style-spec/fuzz/fuzz_targets/: spec_roundtrip.rs
style-spec/src/: expression_validate.rs  fuzz_helpers.rs  lib.rs  shared_expr.rs  typed_visitor.rs  validate.rs
style-spec/src/decoder/: enum.rs  mod.rs  property_type.rs
style-spec/src/fixture/: expression_name_renaming.json
style-spec/src/generator/: formatter.rs  fuzz.rs  literals.rs  mod.rs  untagged.rs
style-spec/src/generator/items/: array.rs  boolean.rs  color.rs  color_array.rs  formatted.rs  mod.rs  number.rs  number_array.rs  padding.rs  promote_id.rs  reference.rs  resolved_image.rs  sprite.rs  state.rs  string.rs
style-spec/src/generator/items/enum/: mod.rs  syntax.rs
style-spec/src/generator/snapshots/: maplibre_style_spec__generator__tests__expression_name_renaming.snap  maplibre_style_spec__generator__tests__generate_spec_groups.snap  maplibre_style_spec__generator__tests__generate_spec_items.snap  maplibre_style_spec__generator__tests__generate_spec_oneof.snap
style-spec/src/mir/: README.md  expressions.rs  layers.rs  lower.rs  mod.rs  resources.rs  root.rs  sources.rs  types.rs
style-spec/src/mir/preprocessing/: expressions.rs  layers.rs  mod.rs  sources.rs
style-spec/src/mir/preprocessing/snapshots/: maplibre_style_spec__mir__preprocessing__layers__tests__decode_top_level.snap  maplibre_style_spec__mir__preprocessing__layers__tests__decode_top_level.snap.new  (+1 more)
style-spec/src/spec/: expressions.rs  layers.rs  literals.rs  mod.rs  named_types.rs  root.rs  sources.rs
style-spec/tests/: expression_reject_parity.rs  roundtrip_catalog.rs  roundtrip_layers.rs  style_spec_reject_parity.rs  test_decoder.rs
(+31 files in other folders)
