[workspace]
resolver = "3"
members = ["codegen2", "style-optimizer", "style-spec"]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/CommanderStorm/maplibre-optimiser"
rust-version = "1.92"
homepage = "https://martin.maplibre.org/"

[workspace.lints.rust]
unused_qualifications = "warn"
unsafe_code = "forbid"

[workspace.lints.clippy]
# Restrictions
# unimplemented = "warn"
# panic_in_result_fn = "warn"
# panic = "warn"
# todo = "warn"
# Pedantics without being too noisy
pedantic = { level = "warn", priority = -1 }
derive_partial_eq_without_eq = "allow"
enum_variant_names = "allow"
implicit_hasher = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
struct_field_names = "allow"

[workspace.dependencies]
anyhow = "1.0"
arbitrary = { version = "1.4", features = ["derive"] }
clap = { version = "4", features = ["derive", "unstable-markdown", "wrap_help"] }
codegen2 = { version = "0.3.0", path = "codegen2" }
color = "0.3.2"
criterion = { version = "0.8", features = ["async_futures", "async_tokio", "html_reports"] }
flate2 = "1"
geojson = "0.24.2"
image = "0.25.9"
indexmap = { version = "2", features = ["serde"] }
insta = { version = "1.46", features = ["yaml"] }
maplibre_native = "0.4.1"
mlt-core = { version = "0.4", features = ["fastpfor-cpp"] }
pretty_assertions = "1.4"
prost = "0.13"
prost-build = "0.13"
rand = "0.9"
rayon = "1"
reqwest = { version = "0.12", features = ["json"] }
rstest = "0.26.1"
rusqlite = { version = "0.34", features = ["bundled"] }
rustls = "0.23.35"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
serde_with = "3.16"
thiserror = "2.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
url = "2.5"

[profile.dev.package]
# See https://docs.rs/insta/latest/insta/#optional-faster-runs
insta.opt-level = 3
similar.opt-level = 3

[profile.release]
# Make release binaries a bit smaller
lto = true
codegen-units = 1
