[package]
name = "maplibre-style-optimizer"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "maplibre-style-optimize"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
indexmap.workspace = true
maplibre-style-spec = { path = "../maplibre-style-spec", features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

[dev-dependencies]
arbitrary = { workspace = true }
maplibre-style-spec = { path = "../maplibre-style-spec", features = ["full", "fuzz"] }
proptest = "1"
serde_json = { workspace = true }

[lints]
workspace = true
