[package]
name = "maplibre-style-optimizer"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "maplibre-style-optimize"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
flate2.workspace = true
indexmap.workspace = true
maplibre-style-spec = { path = "../style-spec", features = ["full"] }
prost.workspace = true
rand.workspace = true
mlt-core.workspace = true
rusqlite.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

[build-dependencies]
prost-build.workspace = true

[dev-dependencies]
arbitrary = { workspace = true }
geo-types = "0.7"
insta.workspace = true
maplibre-style-spec = { path = "../style-spec", features = ["full", "fuzz"] }
proptest = "1"
rusqlite.workspace = true
serde_json = { workspace = true }
tempfile = "3"

[lints]
workspace = true
