[package]
name = "maplibre-style-spec-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { version = "1.4", features = ["derive"] }
libfuzzer-sys = "0.4"
maplibre-style-spec = { path = "..", features = ["full", "fuzz"] }
pretty_assertions = "1.4"
serde_json = "1"

[[bin]]
name = "spec_roundtrip"
path = "fuzz_targets/spec_roundtrip.rs"
test = false
doc = false
bench = false

[workspace]
